// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem unmocked Component NavItem unmocked submenu gets closed 1`] = `
<body>
  <div>
    <div
      class="item"
      data-testid="DATA-TEST-ID"
    >
      <div
        class="label"
      >
        ITEM
      </div>
      <i
        class="icon caret"
        icon="fas,caret-down"
      />
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom"
          role="menu"
          style="position: absolute; margin: 0px; display: none; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-bottom"
            style="position: absolute;"
          />
          <a
            href="#"
          >
            partial url
            <li
              class="szh-menu__item"
              data-testid="SUBITEMDATA-TEST-ID"
              role="menuitem"
              tabindex="-1"
            >
              SUBITEM
            </li>
          </a>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`NavItem unmocked Component NavItem unmocked submenu gets closed 2`] = `
<body>
  <div>
    <div
      class="item"
      data-testid="DATA-TEST-ID"
    >
      <div
        class="label"
      >
        ITEM
      </div>
      <i
        class="icon caret"
        icon="fas,caret-down"
      />
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom"
          role="menu"
          style="position: absolute; margin: 0px; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-bottom"
            style="position: absolute; left: 0px;"
          />
          <a
            href="#"
          >
            partial url
            <li
              class="szh-menu__item"
              data-testid="SUBITEMDATA-TEST-ID"
              role="menuitem"
              tabindex="-1"
            >
              SUBITEM
            </li>
          </a>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`NavItem unmocked Component NavItem unmocked submenu gets closed 3`] = `
<body>
  <div>
    <div
      class="item"
      data-testid="DATA-TEST-ID"
    >
      <div
        class="label"
      >
        ITEM
      </div>
      <i
        class="icon caret"
        icon="fas,caret-down"
      />
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-closed szh-menu--dir-bottom"
          role="menu"
          style="position: absolute; margin: 0px; left: 0px; top: 0px; display: none;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-bottom"
            style="position: absolute; left: 0px;"
          />
          <a
            href="#"
          >
            partial url
            <li
              class="szh-menu__item"
              data-testid="SUBITEMDATA-TEST-ID"
              role="menuitem"
              tabindex="-1"
            >
              SUBITEM
            </li>
          </a>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`NavItem unmocked Component NavItem unmocked submenu gets closed 4`] = `
<body>
  <div>
    <div
      class="item"
      data-testid="DATA-TEST-ID"
    >
      <div
        class="label"
      >
        ITEM
      </div>
      <i
        class="icon caret"
        icon="fas,caret-down"
      />
    </div>
  </div>
  <div
    id="root-portal-id"
  >
    <div>
      <div
        class="szh-menu-container"
        style="position: relative;"
      >
        <ul
          aria-label="Menu"
          class="szh-menu szh-menu--state-open szh-menu--dir-bottom"
          role="menu"
          style="position: absolute; margin: 0px; left: 0px; top: 0px;"
          tabindex="-1"
        >
          <div
            style="position: absolute; left: 0px; top: 0px;"
            tabindex="-1"
          />
          <div
            class="szh-menu__arrow szh-menu__arrow--dir-bottom"
            style="position: absolute; left: 0px;"
          />
          <a
            href="#"
          >
            partial url
            <li
              class="szh-menu__item"
              data-testid="SUBITEMDATA-TEST-ID"
              role="menuitem"
              tabindex="-1"
            >
              SUBITEM
            </li>
          </a>
        </ul>
      </div>
    </div>
  </div>
</body>
`;
